# ai-trader

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements-gpu-rocm.txt  requirements.txt
bot/accelerated/: __init__.py  jax_rlgen.py
bot/ai/: __init__.py  continuous_learning_ai.py  execution_quality_ai.py  market_regime_ai.py  meta_supervisor_ai.py  mistake_pattern_ai.py  model_registry.py  risk_filter_ai.py  setup_quality_ai.py  strategy_weight_ai.py  training_pipeline.py
bot/backtesting/: __init__.py  backtest_agent.py  metrics.py  result_analyzer.py  trade_simulator.py  walk_forward.py
bot/core/: __init__.py  config.py  main_bot.py  models.py  orchestrator.py  state_manager.py
bot/data/: __init__.py  data_agent.py  data_loader.py  databento_connector.py  dataset_builder.py  feature_builder.py  ibkr_connector.py  nas100_csv_loader.py  timeframe_sync.py
bot/execution/: __init__.py  broker_executor.py  commission_model.py  execution_agent.py  order_manager.py  paper_executor.py  slippage_model.py
bot/indicators/: __init__.py  atr.py  ema.py  indicator_agent.py  momentum.py  rsi.py  volatility_regime.py  vwap.py
bot/memory/: __init__.py  (+5 more)
dashboard/: app.js  index.html  styles.css
scripts/: build_project_structure.py  check_jax_gpu.py  prepare_dataset.py  run_backtest.py  run_continuous_learning.py  run_continuous_rl_gen_learning.py  run_paper_trading.py  serve_dashboard.py  train_market_regime_ai.py  train_setup_quality_ai.py
tests/: test_backtest.py  test_data_loader.py  test_indicators.py  test_risk.py  test_strategies.py
(+24 files in other folders)
